Inclusao do modulo de contatos, listar e apagar

--- a/Projetos/vagenda/agenda/core/templates/index.html
+++ b/Projetos/vagenda/agenda/core/templates/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
 <h1>Bem Vindo!</h1>
+<a href="{% url 'addcontato' %}" title="">Cadastrar Contato</a><br>
+<a href="{% url 'listacontatos' %}" title="">Listar Contato</a>
 </body>
 </html>
